--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,38 @@
     justify-content: center;
 }
 
-.header,
 .one {
-    width: 400px;
+    height: 400px;
+    width: 100%;
     background-color: #1F2937;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.one-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-top: 10px;
+    gap: 20px;
+}
+
+img {
+  width: 300px;
+}
+
+.split-screen {
+    display: flex;
+    flex-direction: row;
 }
