--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,21 @@
 .main-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    width: 100%;
 }
 
 .one {
-    height: 400px;
-    width: 100%;
+    height: 500px;
     background-color: #1F2937;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
 }
 
 .one-content {
+    width: 800px;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    padding: 15px;
 }
 
 .header {
@@ -28,14 +25,55 @@
     font-size: 18px;
     color: #E5E7EB;
     margin-top: 10px;
-    gap: 20px;
+
 }
 
-img {
-  width: 300px;
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
-.split-screen {
+.links span {
+    padding-left: 20px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.non-header {
+    flex: 1;        /* takes up remaining space in .one-content */
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;     /* adds some space between the written portion and image */
+    margin-top: 0;
+    padding-top: 0;
+}
+
+.left{
+    height: 250px;
+}
+
+.left h1 {
+    margin: 0;
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+}
+
+p {
+    color: #E5E7EB;
+}
+
+.candy-img {
+    width: 400px;
+    height: 250px;
+    object-fit: cover;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 10px;
+    padding: 5px 25px;
+    border: none;
 }
