--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,58 @@ button {
     padding: 5px 25px;
     border: none;
 }
+
+.two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
+}
+
+h2 {
+    color: #1F2937;
+}
+
+.cubes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 600px;
+}
+
+.cube-one,
+.cube-two,
+.cube-three,
+.cube-four {
+    width: 100px;
+    height: 100px;
+}
+
+.cubes img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    border: 2px solid #3882F6;
+}
+
+.cubes p {
+    color: #1F2937;
+    font-size: 18px;
+}
+
+.three {
+    background-color: #E5E7EB;
+}
+
+.three p {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.three span {
+    font-weight: bold;
+}
+
+
