--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@
     color: #F9FAF8;
 }
 
-p {
+.left p {
     color: #E5E7EB;
 }
 
@@ -121,14 +121,27 @@ h2 {
     background-color: #E5E7EB;
 }
 
+.three-content {
+    margin: 100px auto;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .three p {
     font-size: 36px;
     font-style: italic;
+    font-weight: 300;
     color: #1F2937;
+    margin: 0px;
+    padding: 0px;
 }
 
 .three span {
     font-weight: bold;
+    align-self: flex-end;
 }
 
 
