--- a/styles.css
+++ b/styles.css
@@ -180,3 +180,13 @@ h2 {
     border-radius: 15px;
     border: 2px solid white;
 }
+
+.footer {
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0px;
+}
